--- a/sass/_FunForms.scss
+++ b/sass/_FunForms.scss
@@ -1,4 +1,6 @@
-.fun-checkbox {display:inline-block; width:12px; height:12px;
+.fun-checkbox {
+    display:inline-block;
+    width:12px; height:12px;
     border:1px solid #9e9fa1;
     border-bottom:1px solid #888;
     border-top:1px solid #bbb;
